# gusto

./: .gitignore  Dockerfile  README.md  alembic.ini  gusto.py  logconfig.ini  pyproject.toml
alembic/versions/: 5858d739abff_create_basic_tables.py
config/: config-docker.env  config-local.env  config.env
gusto/: cli.py  mealplan.py  web.py
gusto/gusto/: cli.py  constraints.py  controllers.py  mealplan.py  models.py  web.py
gusto/static/: app.js  gusto-favicon.xcf  styles.css
gusto/static/css/: styles.css
gusto/static/js/: app.js  meals.js  models.js  navbar.js  recipes.js  shared-components.js
gusto/templates/: mealplan.html  recipes.html
gusto/templates/layout/: default.html
static/: app.js  styles.css
templates/: index.html  recipes.html
